RMagick 1.10.1
	o Fix bug #3437, memory leak in ImageList#to_blob
	o Fix bug #3363, Image#composite doesn't work when the source image
	  is bigger than the destination
RMagick 1.10.0
    o Added add_noise_channel method to Image class (available with ImageMagick 6.2.5)
    o Added vignette method to the Image class (available with ImageMagick 6.2.6)
    o Added crop_resize method to the Image class (thanks to Jerret Taylor for
      the suggestion and original code)
    o Added export_pixels_to_str method to the Image class
    o Provided default arguments to Image#export_pixels
    o Added "order" option to Image#ordered_dither
    o Added cyan, magenta, yellow, and black attribute accessors to the Pixel class
    o Added CineonLogRGBColorspace, LABColorspace, Rec601LumaColorspace,
      Rec601YCbCrColorspace, Rec709LumaColorspace, Rec709YCbCrColorspace,
      LogColorspace enumerators to the ColorspaceType enumeration class.
    o Fixed bug #2844, Image#to_blob exits if the image is a 0x0 JPEG
    o Fixed bug #2688, Image#annotate, Draw#get_multiline_type_metrics handle
      newline characters properly
    o Tested with ImageMagick 6.2.6
    o Removed support for all versions of ImageMagick prior to 6.0.0

RMagick 1.9.3
    o Feature #2521, add Image#distortion_channel method
    o Fixed bug #2546, ImageList#to_blob builds multi-image blobs again. (ImageMagick 6.2.0
      silently broke the ImageToBlob method.) Thanks to Tom Werner for reporting this bug.
    o Test with GraphicsMagick 1.1.7

RMagick 1.9.2
    o Feature #2412, add the virtual_pixel_method attribute and the VirtualPixelMethod
      enumeration
    o Feature #2462, add the ticks_per_second attribute

RMagick 1.9.1
    o Fixed bug #2157, Image#total_colors is now an alias of Image#number_colors
    o Fixed bug #2155, Image#dispose= now accepts a DisposeType enum, #dispose
      now returns a DisposeType enum.
    o Fixed bug #2156, Image#properties no longer returns garbage for the property